--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,13 @@
 /* styles go here */
+.fieldset {
+  margin-bottom: 20px;
+}
+
+.formField {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.formField:last-child {
+  margin-bottom: 0;
+}
